# mcp-json-yaml-toml

./: .gitignore  .markdownlint-cli2.jsonc  .mcp.json  .mcpbignore  .pre-commit-config.yaml  .shellcheckrc  AGENTS.md  CLAUDE.md  MODULE_USAGE.md  README.md  manifest.json  pyproject.toml
.agent/workflows/: understand-dismantle-and-rewrite-prompt-to-be-optimized-for-gemini.md
.claude/agents/: python-cli-architect.md  structured-data-mcp-tester.md
.claude/rules/: ci-pipelines.md  testing-practices.md  yq-wrapper.md
.claude/skills/: snakepolish.md  stinkysnake.md
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: update_yq_checksums.py
.github/workflows/: auto-publish.yml  claude-code-review.yml  test.yml  yq-update.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/milestones/v1.1-phases/01-architectural-foundation/: 01-01-SUMMARY.md  01-02-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md
.planning/milestones/v1.1-phases/02-tool-layer-refactoring/: 02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-04-PLAN.md  02-VERIFICATION.md
.planning/milestones/v1.1-phases/03-fastmcp-3x-migration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-UAT.md
.planning/milestones/v1.1-phases/04-competitive-features/: 04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/milestones/v1.1-phases/05-type-safety-and-dry-foundation/: 05-02-PLAN.md
.planning/milestones/v1.1-phases/06-operational-safety/: 06-VERIFICATION.md
.planning/milestones/v1.1-phases/07-architecture-refactoring/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md
.planning/milestones/v1.1-phases/08-test-quality/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md
.planning/phases/01-architectural-foundation/: 01-01-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-VERIFICATION.md
.planning/phases/02-tool-layer-refactoring/: 02-01-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-SUMMARY.md  02-RESEARCH.md  02-UAT.md
.planning/phases/03-fastmcp-3x-migration/: 03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-competitive-features/: 04-01-PLAN.md
.planning/phases/05-type-safety-and-dry-foundation/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-SUMMARY.md  05-VERIFICATION.md
.planning/phases/06-operational-safety/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md
.planning/phases/07-architecture-refactoring/: 07-VERIFICATION.md
.planning/phases/08-test-quality/: 08-01-PLAN.md  08-02-PLAN.md  08-VERIFICATION.md
.planning/phases/09-logging-infrastructure/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-CONTEXT.md  09-RESEARCH.md
.planning/quick/1-add-data-type-meta-support-to-data-tool-/: 1-PLAN.md  1-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/pending/: 2026-02-15-fix-systemic-code-quality-issues.md  2026-02-15-improve-test-quality-and-coverage-gaps.md  2026-02-15-integrate-loguru-for-structured-logging.md  2026-02-15-refactor-god-modules-and-deprecated-shims.md  2026-02-16-improve-schema-validation-error-reporting.md  2026-02-16-multi-document-yaml-file-handling.md  2026-02-16-pre-write-syntax-and-schema-validation-for-crud-operations.md  2026-02-17-investigate-windows-ci-test-hang.md
docs/: MODULE_USAGE.md  TOOLS.md  UPGRADE_SUMMARY.md  clients.md  fastmcp-v3-upgrade-plan.md  module-usage.md  tools.md  yq-wrapper.md  yq_wrapper_usage.md
scripts/: benchmark_token_usage.py
tests/: __init__.py  test_pagination.py  verify_features.py
